--- a/readme
+++ b/readme
@@ -1,2 +1,2 @@
-The copyright belongs to the original authors.
+The copyright belongs to the authors.
 If there's any questions, please contact the first author. 
